Adds ansible version 2 compatibility
* Addresses openshift/openshift-ansible#686
* fix bare and duplicated variables
* makes the use of sudo/become consistent
* makes the use of yes/no/true/false consistent

--- a/inventory/byo/hosts.aep.example
+++ b/inventory/byo/hosts.aep.example
@@ -16,7 +16,7 @@ ansible_ssh_user=root
 
 # If ansible_ssh_user is not root, ansible_become must be set to true and the
 # user must be configured for passwordless sudo
-#ansible_become=yes
+#ansible_become=true
 
 # Debug level for all Atomic Enterprise components (Defaults to 2)
 debug_level=2
