--- a/roles/nuage_master/tasks/main.yaml
+++ b/roles/nuage_master/tasks/main.yaml
@@ -1,31 +1,31 @@
 ---
 - name: Create directory /usr/share/nuage-openshift-monitor
-  become: yes
-  file: path=/usr/share/nuage-openshift-monitor state=directory  
+  become: true
+  file: path=/usr/share/nuage-openshift-monitor state=directory
 
 - name: Create the log directory
-  become: yes
+  become: true
   file: path={{ nuage_mon_rest_server_logdir }} state=directory
 
 - name: Install Nuage Openshift Monitor 
-  become: yes
+  become: true
   yum: name={{ nuage_openshift_rpm }} state=present
 
 - include: serviceaccount.yml
 
 - name: Download the certs and keys
-  become: yes
+  become: true
   fetch: src={{ cert_output_dir }}/{{ item }} dest=/tmp/{{ item }} flat=yes
   with_items:
         - ca.crt
         - nuage.crt
         - nuage.key
-        - nuage.kubeconfig 
+        - nuage.kubeconfig
 
-- include: certificates.yml 
+- include: certificates.yml
 
 - name: Create nuage-openshift-monitor.yaml
-  become: yes
+  become: true
   template: src=nuage-openshift-monitor.j2 dest=/usr/share/nuage-openshift-monitor/nuage-openshift-monitor.yaml owner=root mode=0644
   notify:
     - restart master
