--- a/inventory/byo/hosts.origin.example
+++ b/inventory/byo/hosts.origin.example
@@ -17,7 +17,7 @@ ansible_ssh_user=root
 
 # If ansible_ssh_user is not root, ansible_become must be set to true and the
 # user must be configured for passwordless sudo
-#ansible_become=yes
+#ansible_become=true
 
 # Debug level for all OpenShift components (Defaults to 2)
 debug_level=2
