--- a/playbooks/adhoc/uninstall.yml
+++ b/playbooks/adhoc/uninstall.yml
@@ -10,7 +10,7 @@
 - hosts:
     - OSEv3:children
 
-  become: yes
+  become: true
 
   tasks:
     - name: Detecting Operating System
@@ -243,7 +243,7 @@
       command: systemctl daemon-reload
 
 - hosts: nodes
-  become: yes
+  become: true
   tasks:
     - name: restart docker
       service: name=docker state=restarted
