--- a/roles/flannel/tasks/main.yml
+++ b/roles/flannel/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: Install flannel
-  become: yes
+  become: true
   action: "{{ ansible_pkg_mgr }} name=flannel state=present"
   when: not openshift.common.is_containerized | bool
 
 - name: Set flannel etcd url
-  become: yes
+  become: true
   lineinfile:
     dest: /etc/sysconfig/flanneld
     backrefs: yes
@@ -13,7 +13,7 @@
     line: '\1{{ etcd_hosts|join(",") }}'
 
 - name: Set flannel etcd key
-  become: yes
+  become: true
   lineinfile:
     dest: /etc/sysconfig/flanneld
     backrefs: yes
@@ -21,7 +21,7 @@
     line: '\1{{ flannel_etcd_key }}'
 
 - name: Set flannel options
-  become: yes
+  become: true
   lineinfile:
     dest: /etc/sysconfig/flanneld
     backrefs: yes
@@ -29,7 +29,7 @@
     line: '\1--iface {{ flannel_interface }} --etcd-cafile={{ etcd_peer_ca_file }} --etcd-keyfile={{ etcd_peer_key_file }} --etcd-certfile={{ etcd_peer_cert_file }}'
 
 - name: Enable flanneld
-  become: yes
+  become: true
   service:
     name: flanneld
     state: started
@@ -37,7 +37,7 @@
   register: start_result
 
 - name: Remove docker bridge ip
-  become: yes
+  become: true
   shell: ip a del `ip a show docker0 | grep "inet[[:space:]]" | awk '{print $2}'` dev docker0
   notify:
     - restart docker
