--- a/roles/nuage_node/tasks/main.yaml
+++ b/roles/nuage_node/tasks/main.yaml
@@ -1,39 +1,39 @@
 ---
 - name: Install Nuage VRS
-  become: yes
+  become: true
   yum: name={{ vrs_rpm }} state=present
-  
-- name: Set the uplink interface 
-  become: yes
+
+- name: Set the uplink interface
+  become: true
   lineinfile: dest={{ vrs_config }} regexp=^NETWORK_UPLINK_INTF line='NETWORK_UPLINK_INTF={{ uplink_interface }}'
 
-- name: Set the Active Controller 
-  become: yes
+- name: Set the Active Controller
+  become: true
   lineinfile: dest={{ vrs_config }} regexp=^ACTIVE_CONTROLLER line='ACTIVE_CONTROLLER={{ vsc_active_ip }}'
 
-- name: Set the Standby Controller 
-  become: yes
+- name: Set the Standby Controller
+  become: true
   lineinfile: dest={{ vrs_config }} regexp=^STANDBY_CONTROLLER line='STANDBY_CONTROLLER={{ vsc_standby_ip }}'
   when: vsc_standby_ip is defined
 
 - name: Install plugin rpm
-  become: yes
+  become: true
   yum: name={{ plugin_rpm }} state=present
 
 - name: Copy the certificates and keys
-  become: yes
+  become: true
   copy: src="/tmp/{{ item }}" dest="{{ vsp_openshift_dir }}/{{ item }}"
   with_items:
         - ca.crt
         - nuage.crt
         - nuage.key
-        - nuage.kubeconfig 
+        - nuage.kubeconfig
 
 - include: certificates.yml
 
-- name: Set the vsp-openshift.yaml 
-  become: yes
-  template: src=vsp-openshift.j2 dest={{ vsp_openshift_yaml }} owner=root mode=0644 
+- name: Set the vsp-openshift.yaml
+  become: true
+  template: src=vsp-openshift.j2 dest={{ vsp_openshift_yaml }} owner=root mode=0644
   notify:
     - restart vrs
-    - restart node 
+    - restart node
