--- a/roles/openshift_facts/tasks/main.yml
+++ b/roles/openshift_facts/tasks/main.yml
@@ -1,19 +1,18 @@
 ---
-- name: Verify Ansible version is greater than or equal to 1.9.4 and less than 2.0
+- name: Verify Ansible version is greater than or equal to 2.0
   fail:
     msg: "Unsupported ansible version: {{ ansible_version }} found"
-  when: ansible_version.full | version_compare('1.9.4', 'lt') or ansible_version.full | version_compare('2.0', 'ge')
+  when: ansible_version.full | version_compare('2.0', 'lt')
 
 - name: Detecting Operating System
-  shell: ls /run/ostree-booted
-  ignore_errors: yes
-  failed_when: false
+  stat:
+    path: /run/ostree-booted
   changed_when: false
   register: ostree_output
 
 # Locally setup containerized facts for now
 - set_fact:
-    l_is_atomic: "{{ ostree_output.rc == 0 }}"
+    l_is_atomic: "{{ ostree_output.stat.exists }}"
 - set_fact:
     l_is_containerized: "{{ (l_is_atomic | bool) or (containerized | default(false) | bool) }}"
 
