--- a/roles/os_firewall/tasks/firewall/iptables.yml
+++ b/roles/os_firewall/tasks/firewall/iptables.yml
@@ -49,8 +49,7 @@
     action: add
     protocol: "{{ item.port.split('/')[1] }}"
     port: "{{ item.port.split('/')[0] }}"
-  with_items: os_firewall_allow
-  when: os_firewall_allow is defined
+  with_items: "{{ os_firewall_allow  | default([]) }}"
 
 - name: Remove iptables rules
   os_firewall_manage_iptables:
@@ -58,5 +57,5 @@
     action: remove
     protocol: "{{ item.port.split('/')[1] }}"
     port: "{{ item.port.split('/')[0] }}"
-  with_items: os_firewall_deny
+  with_items: "{{ os_firewall_deny }}"
   when: os_firewall_deny is defined
