--- a/roles/openshift_node/tasks/storage_plugins/glusterfs.yml
+++ b/roles/openshift_node/tasks/storage_plugins/glusterfs.yml
@@ -4,9 +4,14 @@
     pkg: glusterfs-fuse
     state: installed
 
-- name: Set seboolean to allow gluster storage plugin access from containers
+- name: Set sebooleans to allow gluster storage plugin access from containers
   seboolean:
-    name: virt_use_fusefs
+    name: "{{ item }}"
     state: yes
     persistent: yes
   when: ansible_selinux and ansible_selinux.status == "enabled"
+  with_items:
+  - virt_use_fusefs
+  - virt_sandbox_use_fusefs
+  register: sebool_result
+  failed_when: "'state' not in sebool_result and 'msg' in sebool_result and 'SELinux boolean item does not exist' not in sebool_result.msg"
