--- a/roles/lib_zabbix/tasks/create_template.yml
+++ b/roles/lib_zabbix/tasks/create_template.yml
@@ -33,6 +33,7 @@
     key: "{{ item.key }}"
     name: "{{ item.name | default(item.key, true) }}"
     value_type: "{{ item.value_type | default('int') }}"
+    data_type: "{{ item.data_type | default('decimal') }}"
     description: "{{ item.description | default('', True) }}"
     multiplier: "{{ item.multiplier | default('', True) }}"
     units: "{{ item.units | default('', True) }}"
@@ -81,6 +82,7 @@
     key: "{{ item.key }}"
     discoveryrule_key: "{{ item.discoveryrule_key }}"
     value_type: "{{ item.value_type }}"
+    data_type: "{{ item.data_type | default('decimal') }}"
     template_name: "{{ template.name }}"
     applications: "{{ item.applications }}"
     description: "{{ item.description | default('', True) }}"
