--- a/.tito/releasers.conf
+++ b/.tito/releasers.conf
@@ -11,3 +11,7 @@ srpm_disttag = .el7ose
 releaser = tito.release.DistGitReleaser
 branches = rhaos-3.1-rhel-7
 srpm_disttag = .el7aos
+
+[copr-openshift-ansible]
+releaser = tito.release.CoprReleaser
+project_name = openshift-ansible
