--- a/roles/kube_nfs_volumes/tasks/main.yml
+++ b/roles/kube_nfs_volumes/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
 - name: Install pyparted (RedHat/Fedora)
   yum: name=pyparted,python-httplib2 state=present
+  when: ansible_pkg_mgr == "yum"
+
+- name: Install pyparted (RedHat/Fedora)
+  dnf: name=pyparted,python-httplib2 state=present
+  when: ansible_pkg_mgr == "dnf"
 
 - name: partition the drives
   partitionpool: disks={{ disks }} force={{ force }} sizes={{ sizes }}
