--- a/roles/openshift_expand_partition/tasks/main.yml
+++ b/roles/openshift_expand_partition/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
 - name: Ensure growpart is installed
   yum: pkg=cloud-utils-growpart state=present
+  when: ansible_pkg_mgr == "yum"
+
+- name: Ensure growpart is installed
+  dnf: pkg=cloud-utils-growpart state=present
+  when: ansible_pkg_mgr == "dnf"
 
 - name: Grow the partitions
   command: "growpart {{oep_drive}} {{oep_partition}}"
