--- a/roles/openshift_node/tasks/storage_plugins/ceph.yml
+++ b/roles/openshift_node/tasks/storage_plugins/ceph.yml
@@ -3,3 +3,10 @@
   yum:
     pkg: ceph-common
     state: installed
+  when: ansible_pkg_mgr == "yum"
+
+- name: Install Ceph storage plugin dependencies
+  dnf:
+    pkg: ceph-common
+    state: installed
+  when: ansible_pkg_mgr == "dnf"
