--- a/roles/openshift_repos/handlers/main.yml
+++ b/roles/openshift_repos/handlers/main.yml
@@ -1,3 +1,6 @@
 ---
-- name: refresh package cache
+- name: refresh yum cache
   command: yum clean all
+
+- name: refresh dnf cache
+  command: dnf clean all
