--- a/roles/os_env_extras/tasks/main.yaml
+++ b/roles/os_env_extras/tasks/main.yaml
@@ -15,3 +15,10 @@
   yum:
     pkg: bash-completion
     state: installed
+  when: ansible_pkg_mgr == "yum"
+
+- name: Bash Completion
+  dnf:
+    pkg: bash-completion
+    state: installed
+  when: ansible_pkg_mgr == "dnf"
