--- a/roles/os_update_latest/tasks/main.yml
+++ b/roles/os_update_latest/tasks/main.yml
@@ -1,3 +1,8 @@
 ---
 - name: Update all packages
   yum: name=* state=latest
+  when: ansible_pkg_mgr == "yum"
+
+- name: Update all packages
+  dnf: name=* state=latest
+  when: ansible_pkg_mgr == "dnf"
