--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -2,6 +2,11 @@
 # tasks file for docker
 - name: Install docker
   yum: pkg=docker
+  when: ansible_pkg_mgr == "yum"
+
+- name: Install docker
+  dnf: pkg=docker
+  when: ansible_pkg_mgr == "dnf"
 
 - name: enable and start the docker service
   service: name=docker enabled=yes state=started
