--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -9,6 +9,11 @@
 
 - name: Install etcd
   yum: pkg=etcd-2.* state=present
+  when: ansible_pkg_mgr == "yum"
+
+- name: Install etcd
+  dnf: pkg=etcd* state=present
+  when: ansible_pkg_mgr == "dnf"
 
 - name: Validate permissions on the config dir
   file:
