--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -79,6 +79,12 @@
 
 - name: Install Master package
   yum: pkg={{ openshift.common.service_type }}-master{{ openshift_version  }} state=present
+  when: ansible_pkg_mgr == "yum"
+  register: install_result
+
+- name: Install Master package
+  dnf: pkg={{ openshift.common.service_type }}-master{{ openshift_version  }} state=present
+  when: ansible_pkg_mgr == "dnf"
   register: install_result
 
 # TODO: These values need to be configurable
@@ -118,7 +124,12 @@
 
 - name: Install httpd-tools if needed
   yum: pkg=httpd-tools state=present
-  when: item.kind == 'HTPasswdPasswordIdentityProvider'
+  when: (ansible_pkg_mgr == "yum") and (item.kind == 'HTPasswdPasswordIdentityProvider')
+  with_items: openshift.master.identity_providers
+
+- name: Install httpd-tools if needed
+  dnf: pkg=httpd-tools state=present
+  when: (ansible_pkg_mgr == "dnf") and (item.kind == 'HTPasswdPasswordIdentityProvider')
   with_items: openshift.master.identity_providers
 
 - name: Ensure htpasswd directory exists
@@ -263,7 +274,12 @@
 
 - name: Install cluster packages
   yum: pkg=pcs state=present
-  when: openshift_master_ha | bool and openshift.master.cluster_method == 'pacemaker'
+  when: (ansible_pkg_mgr == "yum") and openshift_master_ha | bool and openshift.master.cluster_method == 'pacemaker'
+  register: install_result
+
+- name: Install cluster packages
+  dnf: pkg=pcs state=present
+  when: (ansible_pkg_mgr == "dnf") and openshift_master_ha | bool and openshift.master.cluster_method == 'pacemaker'
   register: install_result
 
 - name: Start and enable cluster service
