--- a/roles/openshift_master_ca/tasks/main.yml
+++ b/roles/openshift_master_ca/tasks/main.yml
@@ -1,6 +1,12 @@
 ---
 - name: Install the base package for admin tooling
   yum: pkg={{ openshift.common.service_type }}{{ openshift_version  }} state=present
+  when: ansible_pkg_mgr == "yum"
+  register: install_result
+
+- name: Install the base package for admin tooling
+  dnf: pkg={{ openshift.common.service_type }}{{ openshift_version  }} state=present
+  when: ansible_pkg_mgr == "dnf"
   register: install_result
 
 - name: Reload generated facts
