--- a/roles/os_firewall/tasks/firewall/firewalld.yml
+++ b/roles/os_firewall/tasks/firewall/firewalld.yml
@@ -3,6 +3,14 @@
   yum:
     name: firewalld
     state: present
+  when: ansible_pkg_mgr == "yum"
+  register: install_result
+
+- name: Install firewalld packages
+  dnf:
+    name: firewalld
+    state: present
+  when: ansible_pkg_mgr == "dnf"
   register: install_result
 
 - name: Check if iptables-services is installed
