--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -60,7 +60,7 @@
     register: g_external_etcd_cert_stat_result
   - set_fact:
       etcd_client_certs_missing: "{{ g_external_etcd_cert_stat_result.results
-                                    | map(attribute='stat.exists')
+                                    | oo_collect(attribute='stat.exists')
                                     | list | intersect([false])}}"
       etcd_cert_subdir: openshift-master-{{ openshift.common.hostname }}
       etcd_cert_config_dir: "{{ openshift.common.config_base }}/master"
@@ -157,7 +157,7 @@
     register: g_master_cert_stat_result
   - set_fact:
       master_certs_missing: "{{ False in (g_master_cert_stat_result.results
-                                | map(attribute='stat.exists')
+                                | oo_collect(attribute='stat.exists')
                                 | list ) }}"
       master_cert_subdir: master-{{ openshift.common.hostname }}
       master_cert_config_dir: "{{ openshift.common.config_base }}/master"
@@ -257,11 +257,11 @@
   - set_fact:
       session_auth_secret: "{{ openshift_master_session_auth_secrets
                                 | default(session_auth_output.results
-                                | map(attribute='stdout')
+                                | oo_collect(attribute='stdout')
                                 | list) }}"
       session_encryption_secret: "{{ openshift_master_session_encryption_secrets
                                       | default(session_encryption_output.results
-                                      | map(attribute='stdout')
+                                      | oo_collect(attribute='stdout')
                                       | list) }}"
 
 - name: Parse named certificates
